--- a/src/containers/AddContact/addcontact.module.scss
+++ b/src/containers/AddContact/addcontact.module.scss
@@ -1,16 +1,22 @@
 .addContact {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  width: 100%;
   // position: absolute;
 
+  &__container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
   &__title {
-    font-size: 24px;
+    font-size: 32px;
+    font-weight: 700;
   }
 
   &__btn {
     background: transparent;
     border-radius: 50%;
+    border: navajowhite;
     &:hover {
       cursor: pointer;
     }
