--- a/src/containers/SearchBar/searchbar.module.scss
+++ b/src/containers/SearchBar/searchbar.module.scss
@@ -4,14 +4,17 @@
   // position: absolute;
   padding: 0 12px;
   border: 1px solid #000;
-  border-radius: 16px;
+  border-radius: 20px;
   height: 35px;
   width: 75%;
   margin: 0 auto;
+
+  &__icon {
+    padding-right: 5px;
+  }
   &__input {
     border: none;
     outline: none;
-    width: 90%;
     &:focus {
       border: none;
       outline: none;
