--- a/src/components/ContactListGroup/contactlistgroup.module.scss
+++ b/src/components/ContactListGroup/contactlistgroup.module.scss
@@ -2,6 +2,8 @@
   width: 100%;
   &__firstChar {
     background: #e5e6ea;
-    padding: 2px 16px;
+    padding: 0;
+    width: 90%;
+    margin: 0 auto;
   }
 }
