--- a/src/containers/ContactPageHeader/contactpageheader.module.scss
+++ b/src/containers/ContactPageHeader/contactpageheader.module.scss
@@ -1,11 +1,12 @@
 .contactPageHeader {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   box-sizing: border-box;
   margin-top: 16px;
   width: 100%;
   padding: 0 16px;
+  position: sticky;
   &__goBackButton {
     display: flex;
     align-items: center;
