--- a/src/containers/NewContact/newcontact.module.scss
+++ b/src/containers/NewContact/newcontact.module.scss
@@ -3,16 +3,21 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  height: 600px;
+  height: 90vh;
   &__container {
     position: relative;
     box-sizing: border-box;
     overflow-y: scroll;
     overflow-x: hidden;
+    scrollbar-width: none;
+    &::-webkit-scrollbar{
+      display: none;
+    }
+
   }
 
   &__pic {
-    height: 600px;
+    height: 650px;
     object-fit: cover;
   }
   &__heading {
