--- a/src/containers/ContactPage/contactpage.module.scss
+++ b/src/containers/ContactPage/contactpage.module.scss
@@ -7,7 +7,7 @@
     &__container {
       position: relative;
 
-      img {
+     &__iphone {
         height: 650px;
         width: 100%;
         pointer-events: none;
@@ -43,6 +43,12 @@
     background-repeat: no-repeat;
     background-size: 90px;
     margin-top: 16px;
+
+    &__img{
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+    }
 
     p {
       color: gray;
