--- a/src/containers/EditProfileForm/EditProfileForm.module.scss
+++ b/src/containers/EditProfileForm/EditProfileForm.module.scss
@@ -26,6 +26,12 @@
       background-repeat: no-repeat;
       background-position: 50%;
       background-image: url("../../assets/avatar.png");
+
+      &__img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+      }
     }
   }
 
@@ -68,6 +74,34 @@
         padding-left: 8px;
       }
     }
+
+    li{
+      height: 42px;
+    border: none;
+    border-bottom: 1px solid #8e8e93;
+    margin: 0 auto;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    width: 80%;
+
+    button{
+      background-color: #ff0800;
+      cursor: pointer;
+      border-radius: 50%;
+    }
+
+    input{
+      border: none;
+      outline: none;
+      background: transparent;
+      width: 80%;
+      &:focus{
+        border: none;
+        outline: none;
+      }
+    }
+    }
   }
   &__fileInput {
     display: none;
@@ -78,10 +112,11 @@
     align-items: center;
     justify-content: center;
 
-    p {
+    button {
       color: #ff0800;
       margin: 16px auto 20px;
       cursor: pointer;
+      background: transparent;
     }
   }
   &__img{
