--- a/src/containers/DeleteConfirm/DeleteConfirm.module.scss
+++ b/src/containers/DeleteConfirm/DeleteConfirm.module.scss
@@ -1,11 +1,18 @@
 .deleteConfirm {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 90%;
   z-index: 999;
+  margin: 0 auto;
+  border-radius: 8px;
+  top: 30px;
+  left: 0;
+  display: flex;
+  justify-content: center;
   background: rgba(0, 0, 0, 0.4);
 
   &__modal {
+    position: absolute;
     width: 240px;
     top: 50%;
     left: 50%;
@@ -25,9 +32,8 @@
 
   &__buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-  
   }
 
   &__deleteBtn {
