--- a/src/pages/ContactPage/contactpage.module.scss
+++ b/src/pages/ContactPage/contactpage.module.scss
@@ -7,8 +7,8 @@
     &__container {
       position: relative;
 
-     &__iphone {
-        height: 650px;
+      &__iphone {
+        height: 600px;
         width: 100%;
         pointer-events: none;
       }
@@ -26,7 +26,7 @@
     height: 90%;
     overflow-y: scroll;
     scrollbar-width: none;
-    &::-webkit-scrollbar{
+    &::-webkit-scrollbar {
       display: none;
     }
   }
@@ -44,7 +44,7 @@
     background-size: 90px;
     margin-top: 16px;
 
-    &__img{
+    &__img {
       width: 120px;
       height: 120px;
       border-radius: 50%;
@@ -65,6 +65,11 @@
 
   &__actions {
     width: 100%;
+
+    &__nodata {
+      color: #007aff;
+      text-align: center;
+    }
 
     ul {
       display: flex;
