--- a/src/pages/NewContact/newcontact.module.scss
+++ b/src/pages/NewContact/newcontact.module.scss
@@ -1,27 +1,28 @@
-.editProfile {
+.newContact {
   width: 100%;
   justify-content: center;
   align-items: center;
   display: flex;
-  height: 90vh;
   &__container {
     position: relative;
     box-sizing: border-box;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    scrollbar-width: none;
-    &::-webkit-scrollbar{
-      display: none;
-    }
   }
 
   &__pic {
-    height: 650px;
+    height: 600px;
     object-fit: cover;
   }
-  &__heading {
+
+  &__absolute {
     position: absolute;
     top: 30px;
     width: 100%;
+    height: 90%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
